force-app/main/default/objects/EventVendor__c/EventVendor__c.object-meta.xml
<CustomObject>
    <description>Assignment of a Vendor__c to an Event__c.</description>
    <label>Event Vendor</label>
    <labelPlural>Event Vendors</labelPlural>
    <nameField>
        <label>Assignment</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>