force-app/main/default/objects/EventVendor__c/fields/Assignment_Status__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Status__c</fullName>
    <defaultValue>Requested</defaultValue>
    <label>Assignment Status</label>
    <picklistValues>
        <picklistValue>Requested</picklistValue>
        <picklistValue>Confirmed</picklistValue>
        <picklistValue>Completed</picklistValue>
    </picklistValues>
    <type>Picklist</type>
</CustomField>