force-app/main/default/objects/EventVendor__c/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <label>Event</label>
    <relationshipLabel>Event Vendors</relationshipLabel>
    <relationshipName>EventVendors</relationshipName>
    <type>MasterDetail</type>
</CustomField>