force-app/main/default/objects/EventVendor__c/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <description>Salesforce allows only one master-detail relationship per object, therefore the vendor is a lookup. See the deployment guide.</description>
    <label>Vendor</label>
    <referenceTo>Vendor__c</referenceTo>
    <relationshipLabel>Event Vendors</relationshipLabel>
    <relationshipName>EventVendors</relationshipName>
    <type>Lookup</type>
</CustomField>